Button Alignment Fix

--- a/src/Components/UI/PlanetForm/PlanetForm.css
+++ b/src/Components/UI/PlanetForm/PlanetForm.css
@@ -5,11 +5,6 @@
   border-radius: 1vw;
 }
 
-.LinkContainer {
-  padding-top: 1vh;
-  float: right;
-}
-
 .LabelContainer {
   font-size: 2rem;
   font-weight: bold;
